# cms_pointcloud_optimizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: alpine_builder.Dockerfile  alpine_minimal.Dockerfile  builder_alpine.sh  cms_optimizer-entrypoint.sh  cms_optimizer.Dockerfile  cms_optimizer_alpine.Dockerfile  docker-compose.yml  init.sh
docs/: default_config.json
modules/: CMakeLists.txt
python/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  compression_strategy.cpp  compression_strategy.h  compression_utilities.cpp  compression_utilities.h  configuration_parser.cpp  configuration_parser.h  configuration_parser.ipp  configurations.h  helpers.cpp  helpers.h  pointcloud_parser.cpp  pointcloud_parser.h
src/cilantro_extensions/: pointclouds.h
src/cilantro_extensions/includes/: datastructures.h  file_parser.h  file_writer.h  helpers.h  io_name_mapping.h  ply_adaptor.h  ply_example.cpp  ply_parser.h  pointcloud_base.h  pointcloud_mxins.h  pointcloud_utilities.h  pointcloud_xyz.h  pointcloud_xyz_normals.h  pointcloud_xyz_normals_class.h  pointcloud_xyz_normals_colors.h  pointcloud_xyz_normals_colors_class.h  pointcloud_xyz_normals_colors_intensity.h  pointcloud_xyz_normals_colors_intensity_class.h  pointcloud_xyz_normals_intensity_class.h  pointcloud_xyz_rgb_intensity.h  pointcloud_xyz_scalar.h
src/cilantro_extensions/src/: datastructures.h.cpp  file_parser.cpp  helpers.cpp  ply_adaptor.cpp  ply_parser.cpp  ply_writer.cpp  pointcloud_base.ipp  pointcloud_xyz.ipp  pointcloud_xyz_normals.ipp  pointcloud_xyz_normals_class.ipp  pointcloud_xyz_normals_colors.ipp  pointcloud_xyz_normals_colors_class.ipp  pointcloud_xyz_normals_colors_intensity.ipp  pointcloud_xyz_normals_colors_intensity_class.ipp  pointcloud_xyz_normals_intensity.ipp  pointcloud_xyz_normals_intensity_class.ipp  pointcloud_xyz_scalar.ipp
tests/: CMakeLists.txt  test_point_clouds.cpp
tests/files/: D1K.ply  cube.ply
